ASUSFETest/src/objects/Case_Assignment_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Enter the Category  that is associated with this Case Assignment. Ensure that the value used here exists in Case &quot;Category&quot; Picklist, and that the spelling is identical.</inlineHelpText>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Notice_Email_From_Name__c</fullName>
        <inlineHelpText>The &quot;Name&quot; associated with the Email Address used  for the notice emailed to the customer that a Case has been created.</inlineHelpText>
        <label>Customer Notice Email From Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <inlineHelpText>This Email Address is used:
1. To identify which Assignment Rule to Use (if this address is found in the &quot;Initial Request Sent To Addresses&quot;)
2. As the &quot;From&quot; address for the notice emailed to the customer that a Case has been created.</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Template_ID__c</fullName>
        <inlineHelpText>The 15 character (case sensitive) ID used to identify the Email Template used for the notice emailed to the customer that a Case has been created. You can view this ID immediatly after &quot;...salesforce.com/&quot; in the URL when viewing the desired Template.</inlineHelpText>
        <label>Email Template ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_URL__c</fullName>
        <formula>IF(
LEN(Email_Template_ID__c)&lt;&gt;15
||
LEFT(Email_Template_ID__c,3) &lt;&gt;&quot;00X&quot;
,
&quot;Enter a valid ID in the Email Template ID field&quot;
,
HYPERLINK(&quot;/&quot;&amp;Email_Template_ID__c,&quot;Click to View Associated Template&quot;)
)</formula>
        <inlineHelpText>This is a URL created via a formula. Use this link to verify that the ID entered in the Email Template ID field accurately identifies your desired Template.</inlineHelpText>
        <label>Email Template URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Group__c</fullName>
        <inlineHelpText>Enter the Functional Group that is associated with this Case Assignment. Ensure that the value used here exists in Case &quot;Functional Group&quot; Picklist, and that the spelling is identical.</inlineHelpText>
        <label>Functional Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>Enter the processing Priority for this Case Assignment Rule. It is not possible for two Rules to have the Same Priority.</inlineHelpText>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Queue_ID__c</fullName>
        <inlineHelpText>The 15 character (case sensitive) ID of the Queue or User associated with this Assignment Rule.This ID  is shown immediatly after &quot;....salesforce.com/p/own/Queue/d?id=&quot;  in the URL when viewing the Queue or  &quot;...salesforce.com/&quot; when viewing the User.</inlineHelpText>
        <label>Queue or User ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_URL__c</fullName>
        <formula>IF(
LEN(Queue_ID__c) &lt;&gt; 15
||
(
LEFT(Queue_ID__c,3) &lt;&gt; &quot;005&quot;
&amp;&amp;
LEFT(Queue_ID__c,3) &lt;&gt; &quot;00G&quot;
)
,
&quot;Enter a valid ID in the Queue or User ID field&quot;
,
IF(LEFT(Queue_ID__c,3) = &quot;005&quot;,
HYPERLINK(&quot;/&quot;&amp;Queue_ID__c&amp;&quot;?noredirect=1&quot;,&quot;Click to View Associated User&quot;)
,
HYPERLINK(&quot;/p/own/Queue/d?id=&quot;&amp;Queue_ID__c,&quot;Click to View Associated Queue&quot;))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a URL created via a formula. Use this link to verify that the ID entered in the Queue or User ID field accurately identifies your desired Queue or User.</inlineHelpText>
        <label>Queue or User URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reply_To_Email_Address__c</fullName>
        <inlineHelpText>This Email Address is used as the &quot;Reply To&quot; address for the email that is sent to the customer when a Case has been created. If not specified, the &quot;Email Address&quot; field is used.</inlineHelpText>
        <label>Reply To Email Address</label>
        <type>Email</type>
    </fields>
    <label>Case Assignment Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Customer_Notice_Email_From_Name__c</columns>
        <columns>Functional_Group__c</columns>
        <columns>Category__c</columns>
        <columns>Email_Template_ID__c</columns>
        <columns>Email_Template_URL__c</columns>
        <columns>Queue_ID__c</columns>
        <columns>Queue_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAR-{0000}</displayFormat>
        <label>Case Assignment Rule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>